opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa-service
spec:
  selector:
    app: opa
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
