opa-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opa-access-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: opa # Assuming your OPA pods have this label
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: opacoolapp # Assuming your REST API pods have this label
      ports:
        - protocol: TCP
          port: 8181 # Default port for OPA's HTTP server
